2001-10-03  Sam Steingold  <sds@gnu.org>

	EXPAND-DEFTYPE & TYPE-EXPAND accept an optional argument
	* predtype.d (expand_deftype): take the second arg once_p
	(EXPAND-DEFTYPE): take the second optional arg once-p
	* subr.d (expand-deftype): ditto
	* lispbibl.d (expand_deftype): ditto
	* sequence.d (valid_type): changed the expand_deftype() call
	* type.lisp (type-expand): take the second optional arg once-p
	* describe.lisp (describe-object): use type-expand

2001-10-03  Sam Steingold  <sds@gnu.org>

	* io.d (pr_enter_1): do not print the initial newline with
	definite single-liners

2001-10-02  Sam Steingold  <sds@gnu.org>

	* format.lisp (formatter-main-1): fixed quoting (colon-p and
	atsign-p must be under comma)

2001-10-01  Sam Steingold  <sds@gnu.org>

	* pathname.d (make-pathname): support string and
	:wild/:wild-inferiors :directory arg
	support :UP and :BACK in the directory list
	coerce name &c to normal simple string
	(legal_name): accept non-simple strings
	(subst_up_dotdot): new function
	* constsym.d (:UP, :BACK): added

2001-10-01  Sam Steingold  <sds@gnu.org>

	added EXPAND-DEFTYPE primitive, removed TYPE-EXPAND-1
	* lispbibl.d (expand_deftype): added a prototype
	* predtype.d (expand_deftype, EXPAND-DEFTYPE): implemented
	(COERCE): use expand-deftype()
	* constsym.d, subr.d (EXPAND-DEFTYPE): added
	* sequence.d (find_seq_type): new local function
	(valid_type): split into valid_type() and valid_type1(),
	use expand_deftype() and find_seq_type()
	(get_seq_type): use find_seq_type()
	* type.lisp (typep, canonicalize-type, subtype-integer,
	type-expand-1): use EXPAND-DEFTYPE
	(type-expand-1): folded into type-expand
	* describe.lisp (describe-object): do not use type-expand-1

2001-09-24  Sam Steingold  <sds@gnu.org>

	added functionp macro predicate
	* lispbibl.d (functionp): define
	* record.d (MAKE-FUNCTION-MACRO, MAKE-MACRO): use it
	* predtype.d (COERCE): ditto

2001-09-23  Sam Steingold  <sds@gnu.org>

	optional filling of PPHELP streams